# pytorch_from_scratch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
c10/: CMakeLists.txt
c10/core/: Allocator.cpp  Allocator.h  AutogradState.h  Backend.h  CPUAllocator.cpp  CPUAllocator.h  CopyBytes.h  DefaultDtype.h  Device.cpp  Device.h  DeviceGuard.h  DeviceType.h  DispatchKey.cpp  DispatchKey.h  DispatchKeySet.h  GeneratorImpl.cpp  GeneratorImpl.h  Layout.h  Scalar.h  ScalarType.h  ScalarTypeToTypeMeta.h  Storage.h  StorageImpl.cpp  StorageImpl.h  Stream.h  TensorImpl.h  TensorOptions.cpp  TensorOptions.h  alignment.h  thread_pool.cpp  thread_pool.h  tt.cpp
c10/core/impl/: DeviceGuardImplInterface.h  InlineDeviceGuard.h  InlineStreamGuard.h  LocalDispatchKeySet.h  alloc_cpu.cpp  alloc_cpu.h
c10/cuda/: CMakeLists.txt  CUDACachingAllocator.h  CUDAException.h  CUDAFunctions.cpp  CUDAFunctions.h  CUDAGraphsC10Utils.h  CUDAGuard.h  CUDAMacros.h  CUDAMathCompat.h  CUDAMiscFunctions.h  CUDAStream.h
c10/cuda/impl/: CUDAGuardImpl.h
c10/macros/: Export.h  Macros.h
c10/test/: CMakeLists.txt
c10/test/util/: TypeIndex_test.cpp  flags_test.cpp  registry_test.cpp
c10/util/: ArrayRef.h  BFloat16-inl.h  BFloat16.h  Backtrace.cpp  Backtrace.h  C++17.h  ConstexprCrc.h  Exception.cpp  Exception.h  Flags.h  Half-inl.h  Half.h  Logging.cpp  Logging.h  MaybeOwned.h  Metaprogramming.h  Registry.cpp  Registry.h  StringUtil.cpp  StringUtil.h  ThreadLocalDebugInfo.h  Type.cpp  Type.h  TypeCast.h  TypeIndex.h  TypeList.h  TypeSafeSignMath.h  TypeTraits.h  UniqueVoidPtr.h  complex.h  complex_math.h  flags_use_gflags.cpp  intrusive_ptr.h  irange.h  logging_is_google_glog.h  math_compat.h  numa.cpp  numa.h  thread_name.cpp  thread_name.h  (+2 more)
caffe2/: CMakeLists.txt
caffe2/core/: CMakeLists.txt  common.h  common_gpu.cc  common_gpu.h  context.cc  context.hh  context_base.cc  context_base.hh  context_cuda.hh  context_gpu.cu  context_gpu.hh  macros.h.in  types.cc  types.h
caffe2/macros/: export.hh
caffe2/proto/: CMakeLists.txt  caffe2.proto  torch.proto
caffe2/utils/: CMakeLists.txt  conversions.h  eigen_utils.hh
caffe2/utils/math/: elementwise.cc  elementwise.cu  elementwise.hh  utils.h
cmake/: BuildVariables.cmake  Codegen.cmake  Dependencies.cmake  MiscCheck.cmake  ProtoBuf.cmake  Summary.cmake
cmake/Modules/: FindMKL.cmake
cmake/public/: cuda.cmake  utils.cmake
tools/: build_pytorch_libs.py  build_variables.bzl  generate_torch_version.py
tools/setup_helpers/: cmake.py  env.py
torch/: CMakeLists.txt
torch/csrc/: Makefile  Module.cpp  stub.c  utils.cpp  utils.h
